Wed Dec  6 14:49:44 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * m4/config_h.m4:
        * configure.ac:

          Remove obsolete ACE_LACKS_CMSG_DATA_MACRO and
          ACE_LACKS_CMSG_DATA_MEMBER feature test.

Wed Dec  6 11:07:43 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-mit-pthread.h:
        * ace/config-sco-5.0.0-mit-pthread.h:
          Removed MIT pthread config files, not supported for years
          anymore

        * ace/config-mklinux.h:
          Removed, this linux version hasn't been maintained for years

        * ace/ACE.cpp:
          Removed all mit-pthread specific code

        * configure.ac:
          Removed mit-pthread checks

        * ace/WFMO_Reactor.cpp:
          Const/bool change

Wed Dec  6 07:57:43 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ciao_tests.lst:
        * bin/tao_orb_tests.lst:
        * bin/tao_other_tests.lst:
          Disabled all tests that are disabled in a minimum_corba build also
          when using CORBA/e compact and micro

Tue Dec  5 23:53:34 UTC 2006  Ciju John  <johnc@ociweb.com>

        * tests/Bug_2659_Regression_Test.cpp:
        * tests/run_test.lst:
        * tests/tests.mpc:
          Adding regression test for Bug 2659.

Tue Dec  5 19:44:43 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-freebsd.h:
          Simplified ACE_HAS_SNPRINTF setting

        * ace/config-irix6.x-common.h:
        * ace/config-sco-5.0.0-mit-pthread.h:
        * ace/config-tru64.h:
          Removed commented out defines, makes it easier to search whether
          a macro is defined in any config file or not

        * ace/config-tru64.h:
          Use config-posix.h

        * ace/Read_Buffer.{h,cpp}:
          Changed close_on_delete to a real bool

        * ace/Service_Config.{h,inl}:
        * ace/Service_Gestalt.{h,cpp,inl}:
          Use bool for the ignore arguments

        * ace/SOCK_Dgram.inl:
          Const change
