@@ -1,3 +1,9 @@
+Wed Dec  6 21:06:37 UTC 2006  Ciju John  <johnc@ociweb.com>
+
+        * tests/Bug_2659_Regression_Test.cpp:
+          Compile failure on RTEMS due to non-ANSI signal API on the
+          platform. Fixed by casting function ptr to proper type.
+
 Wed Dec  6 14:49:44 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>
 
         * m4/config_h.m4:
